--- a/bar/bar.cabal
+++ b/bar/bar.cabal
@@ -18,5 +18,6 @@ executable bar
     build-depends:
         base
       , foo
+      , text
     hs-source-dirs:   src
     default-language: Haskell2010
