--- a/cabal.project
+++ b/cabal.project
@@ -1,3 +1,9 @@
 packages:
     ./foo
     ./bar
+
+source-repository-package
+  type: git
+  location: https://github.com/haskell/text.git
+  tag: 123
+  -- tag: 73620de89d43ee50de2d15b7bc0843bf6d6e9b9a
